[package]
name = "cc"
version = "1.2.49"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/cc-rs"
homepage = "https://github.com/rust-lang/cc-rs"
documentation = "https://docs.rs/cc"
description = """
A build-time dependency for Cargo build scripts to assist in invoking the native
C compiler to compile native C code into a static archive to be linked into Rust
code.
"""
keywords = ["build-dependencies"]
readme = "README.md"
categories = ["development-tools::build-utils"]
# The binary target is only used by tests.
exclude = ["/.github", "src/bin", "tests"]
edition = "2018"
rust-version = "1.63"

[workspace]
members = [
  "dev-tools/cc-test",
  "dev-tools/fortranc-test",
  "dev-tools/gen-target-info",
  "dev-tools/gen-windows-sys-binding",
  "dev-tools/wasi-test",
  "find-msvc-tools",
]

[dependencies]
find-msvc-tools = { path = "find-msvc-tools", version = "0.1.5" }
jobserver = { version = "0.1.30", default-features = false, optional = true }
shlex = "1.3.0"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
# Don't turn on the feature "std" for this, see https://github.com/rust-lang/cargo/issues/4866
# which is still an issue with `resolver = "1"`.
libc = { version = "0.2.62", default-features = false, optional = true }

[features]
# This is a placeholder feature for people who incorrectly used `cc` with `features = ["jobserver"]`
# so that they aren't broken. This has never enabled `parallel`, so we won't do that.
jobserver = []
parallel = ["dep:jobserver", "dep:libc"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(disable_clang_cl_tests)"] }

[patch.crates-io]
cc = { path = "." }

[profile.release]
opt-level = 3  # Or "s" or "z" for different optimization goals
lto = true
